src/Base/main/default/objects/Opportunity_Document__c/fields/View_Quote__c.field-meta.xml
<CustomField>
    <fullName>View_Quote__c</fullName>
    <label>View Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>